--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
 
 <% } else if(errors = 2) { %>
 
-<h1>Generic Error</h1>
+<h1>Incorrect Username or Password!</h1>
 
 <% } else { %>
 <h1>Data Failed Validation</h1>
